<resources>
    <string name="greetings">Hello Condira Systems</string>
    <string name="from_local">Showing from saved cache!</string>
    <string name="app_name">Condira Systems</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Paytech Systems!</string>
    <string name="nav_header_subtitle">info@paytech.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="newstaff">New Staff</string>
    <string name="idnumber">ID Number</string>
    <string name="email">Email</string>
    <string name="toolbar_profile">Profile</string>
    <string name="posts">POSTS</string>
    <string name="followers">FOLLOWERS</string>
    <string name="following">FOLLOWING</string>
    <string name="activity_title_home">Notes</string>
    <string name="msg_no_notes">No notes found!</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="lbl_edit_note_title">Edit Note</string>
    <string name="hint_enter_note">Enter your note!</string>
    <string name="no_internet"> No internet connection!</string>
    <string name="backdrop_image"> https://api.androidhive.info/webview/nougat.jpg</string>
    <string name="start_updates"> START </string>
    <string name="stop_updates"> STOP </string>
    <string name="get_last_location"> GET LAST </string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string-array name="nav_item_activity_titles">
        <item>Students</item>
        <item>Branches</item>
        <item>Instructors</item>
        <item>Staff</item>
        <item>Mpesa</item>
        <item>Payments</item>
    </string-array>
    <string name="preview_description">Image and Video preview here</string>
    <string name="btn_take_picture">Take Picture</string>
    <string name="btn_record_video">Upload</string>
    <string name="nav_branch">Branch</string>
    <string name="nav_home">Home</string>
    <string name="nav_staff">Staff</string>
    <string name="nav_instructor">Instructor</string>
    <string name="toolbar_title">Registered Users</string>
    <string name="action_users">Users List</string>
    <string name="search_hint">Search ..</string>
    <string name="action_ticket">Ticket</string>
    <string name="action_search">Search</string>
    <string name="action_camera">Camera</string>
    <string name="action_register">Register</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_sites">Sites</string>
    <string name="lessons"> Lessons </string>
    <string name="lessonsdone"> Lessons Done </string>
    <string name="collections"> Branch Collections </string>
    <string name="editions"> Course Editions </string>
    <string name="mpesa"> Mpesa Payments </string>
    <string name="students"> Students </string>
    <string name="courses"> Courses </string>
    <string name="branches"> Branches </string>
    <string name="permissions"> Permissionss </string>
    <string name="action_delete">Delete</string>
    <string name="spinner_title">Select One</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome"> Welcome </string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_note">Note</string>
    <string name="title_activity_mail">Mail</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_location">My Location</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_teachers">Teachers</string>
    <string name="title_activity_students">Students</string>
    <string name="title_activity_users">Users</string>
    <string name="title_activity_student">New Student</string>
    <string name="title_activity_teacher">New Teacher</string>
    <string name="title_activity_courses">Courses</string>
    <string name="title_activity_course">New Course</string>
    <string name="title_activity_vehicle">New Vehicle</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_mpesa"> Mpesa Transactions</string>
    <string name="title_activity_payments"> Payment Transactions</string>
    <string name="title_activity_vehicles"> Vehicles </string>
    <string name="title_activity_ticket">Scan Barcode/QR</string>
    <string name="lbl_duration">DURATION</string>
    <string name="lbl_genre">GENRE</string>
    <string name="lbl_rating">RATING</string>
    <string name="lbl_price">PRICE</string>
    <string name="btn_buy_now">BUY NOW</string>
    <string name="btn_coming_soon">COMING SOON</string>
    <string name="action_save"> Save </string>
    <string name="msg_no_ticket_found">No ticket found. Try scanning the QR Codes from ttp://api.androidhive.info/qrcodes/</string>
    <string name="action_sign_in_short">Register</string>
    <string name="prompt_password">Prompt Password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">ONE</string>
    <string name="slide_1_desc">Easier work</string>
    <string name="slide_2_title">TWO</string>
    <string name="slide_2_desc">Way forward</string>
    <string name="slide_3_title">THREE</string>
    <string name="slide_3_desc">Best start up!</string>
    <string name="slide_4_title">FOUR</string>
    <string name="slide_4_desc">World Class</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are the Software Developers. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">http://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">http://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">http://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">App Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="key_per_page">key_per_page</string>
    <string name="per_page"> Records Per Page </string>
    <string name="key_url"> key_url </string>
    <string name="default_url"> http://cybersofttechnologies.net/seniors_db/ </string>
    <string name="title_url"> Site URL </string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string name="action_settings_headers">Settings with Headers</string>
    <string name="enter_code_to_create_barcode">Enter code to create barcode</string>
    <string name="generatebarcode">Generate Barcode</string>
    <string name="generateqr">Generate QR</string>
</resources>