<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".genqr.BarcodeGenerationActivity">

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_code_to_create_barcode" />

    <LinearLayout
        android:id="@+id/layoutSexRelation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0">


    <Button
        android:id="@+id/generateBarcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="0.5"
        android:text="@string/generatebarcode" />

    <Button
        android:id="@+id/generateQr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="0.5"
        android:text="@string/generateqr" />
    </LinearLayout>

    <ImageView
        android:id="@+id/generationImageView"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:padding="@dimen/margin_2"
        android:layout_height="wrap_content" />

</LinearLayout>