<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LocationActivity">

    <Button
        android:id="@+id/btn_start_location_updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/start_updates"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_stop_location_updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_start_location_updates"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:enabled="false"
        android:visibility="gone"
        android:text="@string/stop_updates" />

    <Button
        android:id="@+id/btn_get_last_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:text="@string/get_last_location" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/btn_get_last_location"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal"
        android:text="Location updates will be received only when app is foreground" />
 
    <TextView
        android:id="@+id/location_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_alignParentLeft="true"
        android:textColor="#333"
        android:textSize="18dp" />
 
    <TextView
        android:id="@+id/updated_on"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="11dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_viewloc"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbars="vertical" />
</LinearLayout>